// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClusterDetails should render correctly 1`] = `
<DocumentFragment>
  <div
    class="p-3 inline-block max-w-xs rounded shadow-20"
  >
    <footer>
      <h5
        class="text-sm font-bold mb-1"
      >
        Cluster title
      </h5>
      <ul
        class="inline-flex gap-1"
      >
        <li
          data-testid="cluster-detail-risk-badge-high"
        >
          <div
            class="flex items-center font-bold shadow-5 h-5 rounded-full p-0.5 w-max uppercase bg-brand-gray-20 whitespace-nowrap bg-risk-high text-white"
            role="note"
          >
            <span
              class="flex items-center px-1"
            >
              <i
                aria-hidden="true"
                class="ci-chevron_up"
              />
              <span
                class="text-tiny mr-1"
              >
                1
              </span>
            </span>
          </div>
        </li>
        <li
          data-testid="cluster-detail-risk-badge-medium"
        >
          <div
            class="flex items-center font-bold shadow-5 h-5 rounded-full p-0.5 w-max uppercase bg-brand-gray-20 whitespace-nowrap bg-risk-medium text-neutral-shade-100"
            role="note"
          >
            <span
              class="flex items-center px-1"
            >
              <i
                aria-hidden="true"
                class=""
              >
                <svg
                  fill="currentColor"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M9.74 11.921c-.497-.053-.91.09-1.21.441-.364.428-.53.811-.53 1.138H6c0-.998.492-1.83 1.008-2.435.796-.934 1.902-1.245 2.947-1.132 1.021.11 2.01.619 2.752 1.36.453.453 1.03.73 1.552.786.498.053.91-.09 1.21-.441.365-.428.531-.812.531-1.138h2c0 .998-.492 1.83-1.008 2.435-.796.934-1.902 1.245-2.947 1.132-1.021-.11-2.01-.619-2.752-1.36-.453-.453-1.03-.73-1.552-.786z"
                    fill-rule="evenodd"
                  />
                </svg>
              </i>
              <span
                class="text-tiny mr-1"
              >
                1
              </span>
            </span>
          </div>
        </li>
        <li
          data-testid="cluster-detail-risk-badge-low"
        >
          <div
            class="flex items-center font-bold shadow-5 h-5 rounded-full p-0.5 w-max uppercase bg-brand-gray-20 whitespace-nowrap bg-risk-low text-white"
            role="note"
          >
            <span
              class="flex items-center px-1"
            >
              <i
                aria-hidden="true"
                class="ci-chevron_down"
              />
              <span
                class="text-tiny mr-1"
              >
                1
              </span>
            </span>
          </div>
        </li>
        <li
          data-testid="cluster-detail-risk-badge-unknown"
        >
          <div
            class="flex items-center font-bold shadow-5 h-5 rounded-full p-0.5 w-max uppercase bg-brand-gray-20 whitespace-nowrap bg-risk-unknown text-neutral-shade-75"
            role="note"
          >
            <span
              class="flex items-center px-1"
            >
              <span
                class="text-tiny mx-1"
              >
                ? 1
              </span>
            </span>
          </div>
        </li>
      </ul>
    </footer>
  </div>
</DocumentFragment>
`;

exports[`ClusterDetails should render the risk, project and supervisor details when passed 1`] = `
<DocumentFragment>
  <div
    class="p-3 inline-block max-w-xs rounded shadow-20"
  >
    <section
      class="pb-2"
    >
      <div
        class="emotion-0"
      >
        <div
          class="flex items-center font-bold shadow-5 h-5 rounded-full p-0.5 w-max uppercase bg-brand-gray-20 whitespace-nowrap bg-white shadow-none text-risk-low text-base"
          role="note"
        >
          <span
            class="flex items-center px-1"
          >
            <i
              aria-hidden="true"
              class="ci-chevron_down"
            />
            <span
              class="text-tiny mr-1"
            >
              LOW risk
            </span>
          </span>
        </div>
      </div>
      <h5
        class="text-base font-semibold text-neutral-shade-100 pt-2"
      >
        Project ACME
      </h5>
      <span
        class="text-sm text-neutral-shade-75 block"
      >
        Primary Project Supervisor: John Doe
      </span>
    </section>
    <footer>
      <h5
        class="text-sm font-bold mb-1"
      >
        Cluster title
      </h5>
      <ul
        class="inline-flex gap-1"
      >
        <li
          data-testid="cluster-detail-risk-badge-high"
        >
          <div
            class="flex items-center font-bold shadow-5 h-5 rounded-full p-0.5 w-max uppercase bg-brand-gray-20 whitespace-nowrap bg-risk-high text-white"
            role="note"
          >
            <span
              class="flex items-center px-1"
            >
              <i
                aria-hidden="true"
                class="ci-chevron_up"
              />
              <span
                class="text-tiny mr-1"
              >
                1
              </span>
            </span>
          </div>
        </li>
        <li
          data-testid="cluster-detail-risk-badge-medium"
        >
          <div
            class="flex items-center font-bold shadow-5 h-5 rounded-full p-0.5 w-max uppercase bg-brand-gray-20 whitespace-nowrap bg-risk-medium text-neutral-shade-100"
            role="note"
          >
            <span
              class="flex items-center px-1"
            >
              <i
                aria-hidden="true"
                class=""
              >
                <svg
                  fill="currentColor"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M9.74 11.921c-.497-.053-.91.09-1.21.441-.364.428-.53.811-.53 1.138H6c0-.998.492-1.83 1.008-2.435.796-.934 1.902-1.245 2.947-1.132 1.021.11 2.01.619 2.752 1.36.453.453 1.03.73 1.552.786.498.053.91-.09 1.21-.441.365-.428.531-.812.531-1.138h2c0 .998-.492 1.83-1.008 2.435-.796.934-1.902 1.245-2.947 1.132-1.021-.11-2.01-.619-2.752-1.36-.453-.453-1.03-.73-1.552-.786z"
                    fill-rule="evenodd"
                  />
                </svg>
              </i>
              <span
                class="text-tiny mr-1"
              >
                1
              </span>
            </span>
          </div>
        </li>
        <li
          data-testid="cluster-detail-risk-badge-low"
        >
          <div
            class="flex items-center font-bold shadow-5 h-5 rounded-full p-0.5 w-max uppercase bg-brand-gray-20 whitespace-nowrap bg-risk-low text-white"
            role="note"
          >
            <span
              class="flex items-center px-1"
            >
              <i
                aria-hidden="true"
                class="ci-chevron_down"
              />
              <span
                class="text-tiny mr-1"
              >
                1
              </span>
            </span>
          </div>
        </li>
      </ul>
    </footer>
  </div>
</DocumentFragment>
`;
